# desktop-agent

./: .gitignore  MVP_v0_plan.md  README.md  TOOLS.md  controller.py  desktop-agents_projects.md  openclaw_inspired_upgrade.md  project.md  pyproject.toml  requirements.txt  short_term_plan.md  t_agent_improvement_plan.md
docs/: dev_workspace.md  go_online.md  gpt-5-2_prompting_guide.md  plan_skill.md  telegram.md
scripts/: automated_calibration_ui.py  browser_helper_ui.py  capture_resolution.py  chat_ui.py  check_models.py  controller_smoke_test.py  convert_html_to_md.py  cursor_overlay_preview.py  gguf_inspect.py  gguf_weight_hist.py  llm_image_file_grid_demo.py  llm_multi_image_grid_demo.py  llm_screenshot_demo.py  mouse_circle_test.py  openai_web_search_demo.mjs  openai_web_search_demo.py  playwright_mcp_smoke_test.py  pytest.ps1  self_tooling_demo.py  terminal_agent_ui.py
tests/: test_agent_hub.py  test_agent_hub_state_roundtrip.py  test_agents_sdk_session_smoke.py  test_agents_sdk_session_streaming_monkeypatch.py  test_automated_calibration_config.py  test_automated_calibration_system_prompt.py  test_automated_calibration_ui_smoke.py  test_chat_store_prune_empty.py  test_chat_ui_defaults_persist.py  test_chat_ui_smoke.py  test_conpty_terminal_smoke.py  test_controller_server.py  test_create_and_register_analysis_tool.py  test_create_peer_agent_tool.py  test_dev_workspace_paths.py  test_evolving_instruction_history.py  test_evolving_resume_state.py  test_evolving_schemas.py  test_evolving_state.py  test_evolving_tensorboard_logger.py  test_executor.py  test_llm.py  (+40 more)
(+65 files in other folders)
